08_maas/maas-gateway.yaml
# 9.2-2: MaaS Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    opendatahub.io/managed: 'false'
    security.opendatahub.io/authorino-tls-bootstrap: 'true'
  name: maas-default-gateway
  namespace: openshift-ingress
  labels:
    istio.io/rev: openshift-gateway
spec:
  gatewayClassName: data-science-gateway-class
  infrastructure:
    parametersRef:
      group: ''
      kind: ConfigMap
      name: maas-default-gateway-config
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: maas-default-gateway-service-tls
        mode: Terminate
